tests/fail/d002_box_leak.dew
# D002: affine Box allocated, never consumed
def main = fn () {
    def b = box(42);
    0
}
